...
        }
        Row(verticalAlignment = Alignment.Top) {
            AsyncImage(
                model = authorAvatarResource ?: status.author.avatarUrl,
                contentDescription = "${status.author.displayName}のプロフィール画像",
                modifier = Modifier.size(avatarSize).clip(displayPreferences.avatarIconShape.toShape())
                    .testTag("status_author_avatar")
                    .then(
                        if (onAuthorClick == null) Modifier else Modifier.clickable {
                            onAuthorClick(status.author.id)
                        },
                    )
                    .background(MaterialTheme.colorScheme.surface),
...
